rns-lang/test_data/integration_to_be_migrated/error/parser/class_directive/header/trailing_tokens/interface_keyword.rns
.class HelloWorld interface ; interface should appear with other modifiers
.super java/lang/Object
